fix: vertical and horizontal gaps between cards

--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -1,15 +1,17 @@
 .project-card {
-   max-width: 400px;
-   border: 10px;
+   max-width: 300px;
+   max-height: 100%;
+   // border: 10px;
    background-color: #363741;
    color: #fff;
    border: 1px solid #fff;
-   border-color: #fff;
-   gap: 15px;
-   margin-bottom: 20px;
-   margin-left: 15px;
-   height: auto;
-   float: center;
+   // border-color: #fff;
+   // gap: 15px;
+   // margin-left: 15px;
+   // margin-bottom: 20px;
+   // margin-top: 20px;
+   // height: auto;
+   // float: center;
    // height: 600px;
    height: 100%;
    // display: flex;
